--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <body>
             <h1>Odin Recipes</h1>
+
+            <a href="recipes/lasagna.html">Lasagna Recipe</a>
         </body>
     </head>
 </html>
