--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,8 @@
     <head>
         <body>
             <h1>Lasagna Recipe</h1>
+
+            <img src="../images/lasagna.jpg" width="500" height="450">
         </body>
     </head>
 </html>
