Added 2 more recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
             <h1>Odin Recipes</h1>
 
             <a href="recipes/lasagna.html">Lasagna Recipe</a>
+            <a href="recipes/pepperonipizza.html">Pepperoni Pizza</a>
+            <a href="recipes/smashedpotatosoup.html">Smashed Potato Soup</a>
         </body>
     </head>
 </html>
