--- a/recipes/pepperonipizza.html
+++ b/recipes/pepperonipizza.html
@@ -9,29 +9,33 @@
 
             <h2>Description</h2>
 
-            <p>Lasagne, or the singular lasagna, is an Italian dish made of stacked layers of thin flat pasta alternating with fillings such as ragù (ground meats and tomato sauce) and other vegetables, cheese (which may include ricotta and parmesan), and seasonings and spices such as garlic, oregano and basil.</p>
-            <p>The dish may be topped with melted grated mozzarella cheese. Typically, the cooked pasta is assembled with the other ingredients and then baked in an oven. The resulting lasagne casserole is cut into single-serving square portions. </p>
+            <p>Pepperoni is an American variety of salami, made from cured pork and beef seasoned with paprika or other chili pepper. Pepperoni is characteristically soft, slightly smoky, and bright red in color. Thinly sliced pepperoni is a popular pizza topping in American pizzerias.</p>
             
             <h3>Ingredients</h3>
             
             <ul>
-                <li>1 (16 ounce) package lasagna noodles </li>
-                <li>1 pound lean ground beef </li>
-                <li>salt and pepper to taste </li>
-                <li>1 (16 ounce) jar spaghetti sauce </li>
-                <li>1 (16 ounce) jar spaghetti sauce </li>
-                <li>½ pound shredded mozzarella cheese </li>
-                <li>½ pound shredded mozzarella cheese </li>
-                <li>1 pint ricotta cheese </li>
+                <li>½ (12 ounce) can CONTADINA® Tomato Paste </li>
+                <li>1 teaspoon dried oregano, crushed  </li>
+                <li>1 teaspoon dried basil, crushed </li>
+                <li>½ teaspoon garlic powder </li>
+                <li>½ teaspoon onion powder </li>
+                <li>½ teaspoon sugar </li>
+                <li>½ teaspoon salt </li>
+                <li>3 ¼ cups all-purpose flour, or more as needed  </li>
+                <li>1 ⅓ cups very warm water (120 degrees F to 130 degrees F) </li>
+                <li>1 (6 ounce) package HORMEL® Pepperoni  </li>
+                <li>1 cup shredded mozzarella cheese, or more to taste </li>
             </ul>
 
             <h3>Steps</h3>
 
             <ol>
-                <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</li>
-                <li>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</li>
-                <li>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture and cheese mixture until pan is filled.</li>
-                <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
+                <li>For sauce: Combine all sauce ingredients with 1/2 cup water in a medium bowl; set aside for flavors to develop while making crust. Freeze remaining paste .</li>
+                <li>For crusts: Combine 2 cups of flour with the dry yeast, sugar and salt. Add the water and oil and mix until well blended (about 1 minute). Gradually add enough remaining flour slowly, until a soft, sticky dough ball is formed.</li>
+                <li>Knead for about 4 minutes, on a floured surface, until dough is smooth and elastic. Add more flour, if needed. (If using RapidRise® Yeast, let dough rest, covered, for 10 minutes.)</li>
+                <li>Divide dough in half. Pat each half (with floured hands) into a 12-inch greased pizza pan OR roll dough to fit pans.</li>
+                <li>For pizzas: Preheat oven to 425 degrees F. Top crusts with sauce, pepperoni and cheese.</li>
+                <li>Bake for 18 to 20 minutes until crusts are browned and cheese is bubbly. For best results, rotate pizza pans between top and bottom oven racks halfway through baking.</li>
             </ol>
         </body>
     </head>
