--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <head>
         <body>
             <h1>Odin Recipes</h1>
-
+               <div>
             <a href="recipes/lasagna.html">Lasagna Recipe</a>
-            <div></div>
             <a href="recipes/pepperonipizza.html">Pepperoni Pizza</a>
-            <div></div>
             <a href="recipes/smashedpotatosoup.html">Smashed Potato Soup</a>
+                </div>
         </body>
     </head>
 </html>
