--- a/recipes/smashedpotatosoup.html
+++ b/recipes/smashedpotatosoup.html
@@ -35,6 +35,9 @@
                 <li>Carefully remove lid to allow steam to escape. Mash potatoes slightly with a potato masher. Stir in whipping cream, Cheddar cheese and 1/2 cup thinly sliced green onions. If desired, top individual servings with additional sliced green onions.</li>
                 <li>Do not lift or transport liner with food inside. Cool slow cooker completely, spoon out excess liquid, remove liner and toss.</li>
             </ol>
+            <div>
+                <a href="../index.html">Go back to Homepage</a> 
+            </div>
         </body>
     </head>
 </html>
