--- a/recipes/pepperonipizza.html
+++ b/recipes/pepperonipizza.html
@@ -37,6 +37,9 @@
                 <li>For pizzas: Preheat oven to 425 degrees F. Top crusts with sauce, pepperoni and cheese.</li>
                 <li>Bake for 18 to 20 minutes until crusts are browned and cheese is bubbly. For best results, rotate pizza pans between top and bottom oven racks halfway through baking.</li>
             </ol>
+            <div>
+                <a href="../index.html">Go back to Homepage</a> 
+            </div>
         </body>
     </head>
 </html>
