--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <html>
     <head>
         <body>
-            <h1>Odin Recipes</h1>
+            <title>Odin Recipes</title>
                <div>
-            <a href="recipes/lasagna.html">Lasagna Recipe</a>
-            <a href="recipes/pepperonipizza.html">Pepperoni Pizza</a>
-            <a href="recipes/smashedpotatosoup.html">Smashed Potato Soup</a>
+                    <h1>The best recipes in all of Odins Project!</h1>
+                        <p>
+                    Click any of the links to go straight to the recipes:
+                        </p>
+                            <ul>
+                                <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+                                <li><a href="recipes/pepperonipizza.html">Pepperoni Pizza</a></li>
+                                <li><a href="recipes/smashedpotatosoup.html">Smashed Potato Soup</a></li>
+
+                            </ul>
+                                <p>Or Click any of these images to also go straight to the recipes:</p>
+                                    <a href="recipes/lasagna.html"><img src="images/lasagna.jpg" width="70" height="70"></a>
+                                    <a href="recipes/pepperonipizza.html"><img src="images/pepperonipizza.jpg" width="70" height="70"></a>
+                                    <a href="recipes/smashedpotatosoup.html"><img src="images/smashedpotatosoup.jpg" width="70" height="70"></a>  
                 </div>
         </body>
     </head>
